# sciscripttools

./: .pypirc  Dockerfile  README.md  Untitled.ipynb  Untitled_test.ipynb  plot.md  pyproject.toml  requirements.txt
.devcontainer/: aliases  devcontainer.json
legacy_files/: co2.py  plot.py  utility.py
sciscripttools/: __init__.py  arguments.py  checks.py  conversion.py  generic.py  io.py  plot.py  plot_defaults.py  smoothing.py
